File: components/nexus-repository-services/src/test/java/org/sonatype/nexus/repository/security/SecurityFacetSupportTest.java