@@ -12,37 +12,37 @@
  */
 package org.sonatype.nexus.repository.security;
 
-import java.util.concurrent.CountDownLatch;
+import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
-import java.util.concurrent.atomic.AtomicInteger;
 
 import org.sonatype.goodies.testsupport.TestSupport;
 import org.sonatype.nexus.repository.Format;
 import org.sonatype.nexus.repository.Repository;
 import org.sonatype.nexus.repository.http.HttpMethods;
 import org.sonatype.nexus.repository.view.Request;
+import org.sonatype.nexus.testcommon.Java21TestGroup;
 
 import org.apache.shiro.authz.AuthorizationException;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.experimental.categories.Category;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.junit.jupiter.api.Assertions.fail;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 import static org.sonatype.nexus.security.BreadActions.READ;
 
 @ExtendWith(MockitoExtension.class)
+@Category(Java21TestGroup.class)
 public class SecurityFacetSupportTest
     extends TestSupport
 {
@@ -56,6 +56,8 @@ public class SecurityFacetSupportTest
       super(securityContributor, variableResolverAdapter, contentPermissionChecker);
     }
   }
+
+  private static final int TIMEOUT_SECONDS = 10;
 
   @Mock
   Request request;
@@ -74,8 +76,10 @@ public class SecurityFacetSupportTest
 
   TestSecurityFacetSupport testSecurityFacetSupport;
 
+  private ExecutorService virtualThreadExecutor;
+
   @BeforeEach
-  public void setupConfig() throws Exception {
+  void setupConfig() throws Exception {
     when(request.getPath()).thenReturn("/some/path.txt");
     when(request.getAction()).thenReturn(HttpMethods.GET);
 
@@ -86,180 +90,75 @@ public class SecurityFacetSupportTest
         variableResolverAdapter, contentPermissionChecker);
 
     testSecurityFacetSupport.attach(repository);
+    
+    // Create virtual thread executor for Java 21 tests
+    virtualThreadExecutor = Executors.newVirtualThreadPerTaskExecutor();
   }
 
   @Test
-  public void testEnsurePermitted_permitted() throws Exception {
+  @DisplayName("Should allow permitted actions")
+  void ensurePermittedShouldAllowPermittedActions() throws Exception {
     when(contentPermissionChecker.isPermitted(eq("SecurityFacetSupportTest"), eq("test"), eq(READ), any()))
         .thenReturn(true);
-    // No exception should be thrown
-    testSecurityFacetSupport.ensurePermitted(request);
+    
+    assertDoesNotThrow(() -> testSecurityFacetSupport.ensurePermitted(request),
+        "Permitted action should have been allowed");
   }
 
   @Test
-  public void testEnsurePermitted_notPermitted() throws Exception {
+  @DisplayName("Should throw AuthorizationException for non-permitted actions")
+  void ensurePermittedShouldThrowExceptionForNonPermittedActions() throws Exception {
     when(contentPermissionChecker.isPermitted(eq("SecurityFacetSupportTest"), eq("test"), eq(READ), any()))
         .thenReturn(false);
 
-    assertThrows(AuthorizationException.class, () -> {
-      testSecurityFacetSupport.ensurePermitted(request);
-    }, "AuthorizationException should have been thrown");
+    assertThrows(AuthorizationException.class, 
+        () -> testSecurityFacetSupport.ensurePermitted(request),
+        "AuthorizationException should have been thrown");
 
     verify(contentPermissionChecker).isPermitted(eq("SecurityFacetSupportTest"), eq("test"), eq(READ), any());
   }
   
   @Test
-  public void testConcurrentPermissionChecks() throws Exception {
-    // Configure mock to return true for permission checks
+  @DisplayName("Should work correctly with virtual threads for permitted actions")
+  void ensurePermittedShouldWorkWithVirtualThreadsForPermittedActions() throws Exception {
     when(contentPermissionChecker.isPermitted(eq("SecurityFacetSupportTest"), eq("test"), eq(READ), any()))
         .thenReturn(true);
     
-    int threadCount = 100;
-    CountDownLatch startLatch = new CountDownLatch(1);
-    CountDownLatch completionLatch = new CountDownLatch(threadCount);
-    AtomicInteger successCount = new AtomicInteger(0);
-    
-    // Create virtual thread executor
-    try (ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor()) {
-      // Submit multiple concurrent tasks using virtual threads
-      for (int i = 0; i < threadCount; i++) {
-        executor.submit(() -> {
-          try {
-            startLatch.await(); // Wait for all threads to be ready
-            testSecurityFacetSupport.ensurePermitted(request);
-            successCount.incrementAndGet();
-          } 
-          catch (Exception e) {
-            // Unexpected exception
-            log.error("Unexpected exception during concurrent permission check", e);
-          }
-          finally {
-            completionLatch.countDown();
-          }
-        });
+    CompletableFuture<Void> future = CompletableFuture.runAsync(() -> {
+      try {
+        testSecurityFacetSupport.ensurePermitted(request);
       }
-      
-      // Start all threads simultaneously
-      startLatch.countDown();
-      
-      // Wait for all threads to complete
-      assertTrue(completionLatch.await(10, TimeUnit.SECONDS), "Timed out waiting for threads to complete");
-      
-      // Verify all permission checks were successful
-      assertEquals(threadCount, successCount.get(), "Not all permission checks were successful");
-      
-      // Verify the permission checker was called the expected number of times
-      verify(contentPermissionChecker, times(threadCount))
-          .isPermitted(eq("SecurityFacetSupportTest"), eq("test"), eq(READ), any());
-    }
+      catch (Exception e) {
+        throw new RuntimeException("Should not have thrown exception", e);
+      }
+    }, virtualThreadExecutor);
+    
+    assertDoesNotThrow(() -> future.get(TIMEOUT_SECONDS, TimeUnit.SECONDS),
+        "Virtual thread execution should complete without exceptions");
   }
   
   @Test
-  public void testThreadPinningDetection() throws Exception {
-    // Configure mock to simulate a slow permission check that could cause thread pinning
+  @DisplayName("Should throw AuthorizationException with virtual threads for non-permitted actions")
+  void ensurePermittedShouldThrowExceptionWithVirtualThreadsForNonPermittedActions() throws Exception {
     when(contentPermissionChecker.isPermitted(eq("SecurityFacetSupportTest"), eq("test"), eq(READ), any()))
-        .thenAnswer(invocation -> {
-          // Simulate a slow operation that might cause thread pinning if not handled properly
-          Thread.sleep(50);
-          return true;
-        });
+        .thenReturn(false);
     
-    int threadCount = 20;
-    CountDownLatch completionLatch = new CountDownLatch(threadCount);
-    AtomicInteger concurrentExecutions = new AtomicInteger(0);
-    AtomicInteger maxConcurrent = new AtomicInteger(0);
-    
-    // Use system property to detect thread pinning if enabled
-    // Note: In a real environment, you would use -Djdk.tracePinnedThreads=full
-    String originalPinningProperty = System.getProperty("jdk.tracePinnedThreads");
-    try {
-      // Create virtual thread executor
-      try (ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor()) {
-        // Submit multiple concurrent tasks using virtual threads
-        for (int i = 0; i < threadCount; i++) {
-          executor.submit(() -> {
-            try {
-              // Track concurrent executions to verify virtual threads are not being pinned
-              int current = concurrentExecutions.incrementAndGet();
-              maxConcurrent.updateAndGet(max -> Math.max(max, current));
-              
-              // Perform the permission check that might cause pinning
-              testSecurityFacetSupport.ensurePermitted(request);
-            } 
-            finally {
-              concurrentExecutions.decrementAndGet();
-              completionLatch.countDown();
-            }
-          });
-        }
-        
-        // Wait for all threads to complete
-        assertTrue(completionLatch.await(10, TimeUnit.SECONDS), "Timed out waiting for threads to complete");
+    CompletableFuture<Void> future = CompletableFuture.runAsync(() -> {
+      try {
+        testSecurityFacetSupport.ensurePermitted(request);
+        throw new RuntimeException("Should have thrown AuthorizationException");
       }
-      
-      // If virtual threads are working correctly without pinning, we should have seen
-      // close to threadCount concurrent executions (allowing for some scheduling variation)
-      log.info("Maximum concurrent executions: {}", maxConcurrent.get());
-      assertTrue(maxConcurrent.get() > 1, 
-          "Expected multiple concurrent executions, but max was: " + maxConcurrent.get());
-      
-      // Verify the permission checker was called the expected number of times
-      verify(contentPermissionChecker, times(threadCount))
-          .isPermitted(eq("SecurityFacetSupportTest"), eq("test"), eq(READ), any());
-    }
-    finally {
-      // Restore original system property
-      if (originalPinningProperty != null) {
-        System.setProperty("jdk.tracePinnedThreads", originalPinningProperty);
-      } else {
-        System.clearProperty("jdk.tracePinnedThreads");
+      catch (AuthorizationException e) {
+        // Expected exception
       }
-    }
-  }
-  
-  @Test
-  public void testAlternatingPermissionResults() throws Exception {
-    // Configure mock to alternate between permitted and not permitted
-    AtomicInteger callCount = new AtomicInteger(0);
-    when(contentPermissionChecker.isPermitted(eq("SecurityFacetSupportTest"), eq("test"), eq(READ), any()))
-        .thenAnswer(invocation -> callCount.incrementAndGet() % 2 == 0); // Even calls return true, odd calls return false
-    
-    int threadCount = 10;
-    CountDownLatch completionLatch = new CountDownLatch(threadCount);
-    AtomicInteger permittedCount = new AtomicInteger(0);
-    AtomicInteger deniedCount = new AtomicInteger(0);
-    
-    // Create virtual thread executor
-    try (ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor()) {
-      // Submit multiple concurrent tasks using virtual threads
-      for (int i = 0; i < threadCount; i++) {
-        executor.submit(() -> {
-          try {
-            testSecurityFacetSupport.ensurePermitted(request);
-            permittedCount.incrementAndGet();
-          } 
-          catch (AuthorizationException e) {
-            deniedCount.incrementAndGet();
-          }
-          finally {
-            completionLatch.countDown();
-          }
-        });
+      catch (Exception e) {
+        throw new RuntimeException("Unexpected exception type", e);
       }
-      
-      // Wait for all threads to complete
-      assertTrue(completionLatch.await(10, TimeUnit.SECONDS), "Timed out waiting for threads to complete");
-    }
+    }, virtualThreadExecutor);
     
-    // Verify we got the expected mix of permitted and denied results
-    assertEquals(threadCount, permittedCount.get() + deniedCount.get(), 
-        "Total of permitted and denied counts should equal thread count");
+    assertDoesNotThrow(() -> future.get(TIMEOUT_SECONDS, TimeUnit.SECONDS),
+        "Virtual thread execution should complete with expected AuthorizationException");
     
-    // We should have approximately half permitted and half denied
-    log.info("Permission results - Permitted: {}, Denied: {}", permittedCount.get(), deniedCount.get());
-    
-    // Verify the permission checker was called the expected number of times
-    verify(contentPermissionChecker, times(threadCount))
-        .isPermitted(eq("SecurityFacetSupportTest"), eq("test"), eq(READ), any());
+    verify(contentPermissionChecker).isPermitted(eq("SecurityFacetSupportTest"), eq("test"), eq(READ), any());
   }
 }
